--- a/leccion_2.html
+++ b/leccion_2.html
@@ -170,7 +170,7 @@
 			<div class="resto_text_bloq1_nv1">
 			  <h2 class= "titulo_resto_lec">Mover tu plata es fácil; mantenerla segura es lo importante.</h2>
 			  <p class= "texto_resto_lec">La seguridad digital te protege de robos y estafas: pequeños hábitos hacen una gran diferencia.<br>
-              Con contraseñas fuertes, verificación en dos pasos y cero clics sospechosos, tus datos y tu dinero se mantienen a salvo.</p>
+              Con contraseñas fuertes, verificación en dos pasos y cero clicks sospechosos, tus datos y tu dinero se mantienen a salvo.</p>
 				  
 			 
 			  </div>
@@ -310,4 +310,5 @@
 	<script src="javascript/javascript.js"></script>
 
 </body>
+
 </html>
